Resolving some issues, probably creating new issues

--- a/references.bib
+++ b/references.bib
@@ -657,4 +657,18 @@
   url        = {https://doi.org/10.3836/tjm/1255958677},
 }
 
+@Book{DigneMichel2020,
+  author    = {Digne, Fran\c cois and Michel, Jean},
+  publisher = {Cambridge University Press, Cambridge},
+  title     = {Representations of finite groups of {L}ie type},
+  year      = {2020},
+  edition   = {Second},
+  isbn      = {978-1-108-72262-9; 978-1-108-48148-9},
+  series    = {London Mathematical Society Student Texts},
+  volume    = {95},
+  mrclass   = {20C33 (20D06 20G05)},
+  mrnumber  = {4211777},
+  pages     = {vii+257},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
